<resources>
    <string name="app_name">EShop_Owner</string>
    <string name="username_edittext_hint">Email</string>
    <string name="pass_edittext_hint">Password</string>
    <string name="login">Login</string>
    <string name="forgot_passowrd">FORGOT PASSWORD ?</string>
    <string name="or">OR</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="sign_up">Sign UP</string>
    <string name="name">Name</string>
    <string name="register">REGISTER</string>
    <string name="already_have_account">Already have Account ?</string>
    <string name="enter_shop_details">Enter Shop Details</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="location_details">Location Details</string>
    <string name="address">Enter Address</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="delivery_range">Delivery Range</string>
    <string name="from_city">From City/Area</string>
    <string name="to_city">To City/Area</string>
    <string name="shop_category">Shop Category</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="done">Done</string>
    <string name="do_you_have_your_own_delivery_service">Do you have your own Delivery Service ?</string>
    <string name="add_item">Add Item</string>
    <string name="billing">Billing</string>
    <string name="hello_blank_fragment">Hello, </string>
    <string name="upload_your_product_image">Upload your product image</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="qty">Qty.</string>
    <string name="add">ADD</string>
    <string name="amount_recieved">Amount received :</string>
    <string name="customer_name">Customer Name :</string>
    <string name="date">Date</string>
    <string name="back">BACK</string>
    <string name="reenter_password">ReEnter Password</string>
    <string name="title_activity_home_screen">Home_Screen_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="payments">Payments</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="used_to_add_product_in_shop">Used to add product in shop</string>
    <string name="shop">Shop</string>
    <string name="products">Products</string>
    <string name="product_image">Product Image</string>
    <string name="it_is_single_product_image">It is single product image</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="order_s_recieved">Order\'s Recieved</string>
    <string name="product">Product</string>
    <string name="oops">OOPS!</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_connection">Please Check Your Connection</string>
    <string name="retry">RETRY</string>
    <string name="pay_charges">Pay Charges</string>
    <string name="pay_monthly_service_charges">Pay Monthly Service Charges</string>
    <string name="image_to_get_payment_charges">Image to get Payment Charges</string>
    <string name="send_to_admin">Send To Admin</string>
    <string name="received">Received</string>
    <string name="cause">Cause</string>
</resources>