<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Owner_Data">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_regular"
                android:padding="8dp"
                android:paddingBottom="3dp"
                android:text="@string/enter_shop_details"
                android:textColor="#1566e0"
                android:textSize="25sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="6.7dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/blue_border_rounded_cornwe">

                <EditText
                    android:id="@+id/shop_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:hint="@string/enter_shop_name"
                    android:inputType="textMultiLine"
                    android:maxLines="1"
                    android:minLines="1"
                    android:paddingLeft="17dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textSize="16sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="9.7dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/shop_category"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/shop_category"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginStart="5dp"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/location_details"
                android:textColor="#1566e0"
                android:textSize="19sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="6.7dp"
                android:layout_marginEnd="32dp">

                <EditText
                    android:id="@+id/shop_addr_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:minLines="1" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="6.7dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/shop_landmark_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="6dp"
                    android:drawableLeft="@drawable/location_icon"
                    android:hint="@string/landmark"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="6.7dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/shop_city_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="6dp"
                    android:drawableLeft="@drawable/location_icon"
                    android:hint="@string/city"
                    android:inputType="text" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/delivery_range"
                android:textColor="#1566e0"
                android:textSize="19sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="6.7dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/shop_from_city_input"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/location_icon"
                    android:hint="@string/from_city"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/shop_to_city_input"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/location_icon"
                    android:hint="@string/to_city"
                    android:inputType="text" />
            </LinearLayout>

            <TextView
                android:id="@+id/del_serv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/do_you_have_your_own_delivery_service"
                android:textColor="#1566e0"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="6.7dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/radio_delivery">
                    <RadioButton
                        android:id="@+id/radio_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/yes"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radio_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="70dp"
                        android:padding="10dp"
                        android:text="@string/no"
                        android:textSize="20sp" />
                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/btn_Done"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="18.7dp"
                android:layout_marginRight="62dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/blue_fill__rounded_color"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="@string/done"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>