<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorAccentDemo"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ChargesFragment">

    <TextView
        android:id="@+id/text_charges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_monthly_service_charges"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="25dp"
        android:background="@drawable/imageborder"/>

    <ImageView
        android:id="@+id/imgViewCharges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/upl_img"
        android:layout_margin="25dp"
        android:contentDescription="@string/image_to_get_payment_charges" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:text="@string/send_to_admin"
        android:padding="10dp"
        android:textSize="20sp" />

</LinearLayout>
