<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#C4C4C4">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/shop_name_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:maxLines="2"
            android:text="@string/shop"
            android:minLines="2"/>
    </LinearLayout>

    <TextView
        android:id="@+id/product_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/products"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        android:layout_marginBottom="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/products_list"/>

</LinearLayout>